Добавлена цель telegram_click для Яндекс.Метрики

--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
     </a>
     <h1>Заработок BTC без вложений</h1>
     <p>Подписывайся на наш Telegram-канал и начни зарабатывать уже сегодня!</p>
-    <a class="button" href="https://t.me/+4BS5e0Sz6Ec5ZGYy" target="_blank">Перейти в Telegram</a>
+    <a class="button" href="https://t.me/+4BS5e0Sz6Ec5ZGYy" target="_blank"
+   onclick="ym(101159299, 'reachGoal', 'telegram_click'); return true;">
+   Перейти в Telegram
+</a>
+
 
     <div class="share-buttons">
       <button onclick="copyLink()">📋 Скопировать ссылку</button>
