Добавлен таймер обратного отсчёта и обновлены условия конкурса

--- a/bonus.html
+++ b/bonus.html
@@ -42,6 +42,11 @@
     .center {
       text-align: center;
     }
+    .countdown {
+      font-size: 24px;
+      font-weight: bold;
+      color: #e63946;
+    }
   </style>
 </head>
 <body>
@@ -50,15 +55,18 @@
     <p class="center">🚀 Мы преодолели рубеж в <strong>200 рефералов</strong>! Это невероятно! 🥳<br>
     В честь этого запускаем <strong>розыгрыш с ценными призами</strong> 🎯</p>
 
+    <h2>🎉 Победитель предыдущего розыгрыша: <strong>duc101</strong> 🏆</h2>
+
     <h2>📝 Как участвовать:</h2>
     <ul>
       <li>🔗 Зарегистрируйтесь на платформе:  
-        <br>👉 <a class="button" href="https://teaserfast.ru/u/f0043a6">Для пользователей</a>
-        <a class="button" href="https://teaserfast.ru/a/f0043a6">Для рекламодателей</a>
+        <br>👉 <a class="button" href="https://teaserfast.ru/u/duc101" target="_blank">Для пользователей</a>
+        <a class="button" href="https://teaserfast.ru/a/duc101" target="_blank">Для рекламодателей</a>
       </li>
       <li>🔥 Будьте активны: размещайте рекламу, привлекайте рефералов, зарабатывайте!</li>
       <li>🎯 Набирайте баллы за активность (входы, регистрацию, заработок)</li>
-      <li>🏁 Следите за <a class="button" href="https://sphere.freeforums.net/thread/20/teaserfast">результатами конкурса</a> на форуме</li>
+      <li>🖼 Установите аватар: это обязательно для участия в розыгрыше. Без аватара вы теряете шанс на выигрыш!</li>
+      <li>🏁 Следите за <a class="button" href="https://sphere.freeforums.net/thread/20/teaserfast" target="_blank">результатами конкурса</a> на форуме</li>
     </ul>
 
     <h2>🏆 Призы:</h2>
@@ -72,9 +80,41 @@
     <br>Ссылки в лендинге выбраны случайным образом из списка моих рефералов.  
     <br>⚠️ После конкурса финальная ссылка будет закреплена!</p>
 
-    <h2 class="center">⏳ Итоги: <strong>10 мая 2025</strong></h2>
+    <h2 class="center">⏳ Итоги:</h2>
+    <div class="center countdown" id="countdown"></div>
+
     <p class="center">Участвуйте, продвигайтесь, и получайте призы! 💥<br>
     Удачи всем! 🍀</p>
   </div>
+
+  <script>
+    // Устанавливаем конечную дату (31 мая 2025)
+    const endDate = new Date("May 31, 2025 23:59:59").getTime();
+
+    // Обновляем таймер каждую секунду
+    const countdownInterval = setInterval(function() {
+      // Получаем текущую дату и время
+      const now = new Date().getTime();
+
+      // Разница между конечной датой и текущей
+      const distance = endDate - now;
+
+      // Вычисляем дни, часы, минуты и секунды
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      // Отображаем таймер на странице
+      document.getElementById("countdown").innerHTML = 
+        days + "д " + hours + "ч " + minutes + "м " + seconds + "с ";
+
+      // Если время вышло, выводим сообщение
+      if (distance < 0) {
+        clearInterval(countdownInterval);
+        document.getElementById("countdown").innerHTML = "Время истекло!";
+      }
+    }, 1000);
+  </script>
 </body>
 </html>
