--- a/bonus.html
+++ b/bonus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>🎉 Бонус от Teaserfast</title>
+  <title>🎁 Получи 5₽ за регистрацию</title>
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
   <style>
     html, body {
@@ -47,7 +47,7 @@
       position: relative;
       z-index: 1;
       max-width: 800px;
-      margin: 120px auto 50px;
+      margin: 100px auto 50px;
       background: rgba(255, 255, 255, 0.95);
       padding: 30px;
       border-radius: 12px;
@@ -92,44 +92,40 @@
   <div id="tsparticles"></div>
 
   <a class="sponsor-button" href="https://promisecallback.github.io/btc-landing/" target="_blank">
-  💼 Спонсор: adBTC — заработок BTC без вложений
-</a>
+    💼 Спонсор: adBTC — заработок BTC без вложений
+  </a>
 
   <div class="container">
-    <h1>🎉 Конкурс: Бонус от Teaserfast! 🎁</h1>
-    <p class="center">🚀 Мы преодолели рубеж в <strong>200 рефералов</strong>! Это невероятно! 🥳<br>
-    В честь этого запускаем <strong>розыгрыш с ценными призами</strong> 🎯</p>
+    <h1>🎁 Получи 5₽ за регистрацию на Teaserfast</h1>
+    <p class="center">💸 Бонус начисляется сразу после регистрации!<br>
+      Акция действует до 10 июня — не пропусти шанс! ⏳</p>
 
-    <h2>🎉 Победитель предыдущего розыгрыша: <strong>duc101</strong> 🏆</h2>
+    <div class="center">
+      <a class="button" href="https://teaserfast.ru/u/duc101" target="_blank">👉 Получить бонус</a>
+    </div>
 
-    <h2>📝 Как участвовать:</h2>
+    <h2 class="center">⏳ До окончания акции осталось:</h2>
+    <div class="center countdown" id="countdown"></div>
+
+    <hr>
+
+    <h2>📋 Дополнительные условия:</h2>
     <ul>
-      <li>🔗 Зарегистрируйтесь на платформе:  
-        <br>👉 <a class="button" href="https://teaserfast.ru/u/duc101" target="_blank">Для пользователей</a>
-        <a class="button" href="https://teaserfast.ru/a/duc101" target="_blank">Для рекламодателей</a>
-      </li>
-      <li>🔥 Будьте активны: размещайте рекламу, привлекайте рефералов, зарабатывайте!</li>
-      <li>🎯 Набирайте баллы за активность (входы, регистрацию, заработок)</li>
-      <li>🖼 Установите аватар: это обязательно для участия в розыгрыше. Без аватара вы теряете шанс на выигрыш!</li>
-      <li>🏁 Следите за <a class="button" href="https://sphere.freeforums.net/thread/20/teaserfast" target="_blank">результатами конкурса</a> на форуме</li>
+      <li>🔗 Зарегистрируйтесь на платформе Teaserfast</li>
+      <li>🧠 Установите аватар — он обязателен для участия</li>
+      <li>🎯 Участвуйте в активности, чтобы претендовать на главный приз</li>
+      <li>🏁 Следите за <a class="button" href="https://sphere.freeforums.net/thread/20/teaserfast" target="_blank">результатами конкурса</a></li>
     </ul>
 
     <h2>🏆 Призы:</h2>
     <ul>
-      <li>🥇 <strong>1 место</strong>: Доступ к премиум-функциям + бонус</li>
-      <li>🥈 <strong>2 место</strong>: Уникальные подарки 🎁</li>
-      <li>🥉 <strong>3 место</strong>: Эксклюзивные скидки и бонусы 💸</li>
+      <li>🥇 1 место — премиум доступ + доп. бонус</li>
+      <li>🥈 2 место — полезные подарки</li>
+      <li>🥉 3 место — скидки и поощрения</li>
     </ul>
 
-    <p class="center">🎲 Победитель будет выбран случайно среди активных участников.  
-    <br>Ссылки в лендинге выбраны случайным образом из списка моих рефералов.  
-    <br>⚠️ После конкурса финальная ссылка будет закреплена!</p>
-
-    <h2 class="center">⏳ Итоги:</h2>
-    <div class="center countdown" id="countdown"></div>
-
-    <p class="center">Участвуйте, продвигайтесь, и получайте призы! 💥<br>
-    Удачи всем! 🍀</p>
+    <p class="center">🎲 Победители выбираются случайно среди активных участников.  
+    <br>⚠️ Ссылки распределяются случайным образом. После окончания конкурса будет зафиксирована финальная ссылка.</p>
   </div>
 
   <script>
@@ -173,7 +169,7 @@
       detectRetina: true
     });
 
-    const endDate = new Date("May 31, 2025 23:59:59").getTime();
+    const endDate = new Date("June 10, 2025 23:59:59").getTime();
     const countdownInterval = setInterval(function() {
       const now = new Date().getTime();
       const distance = endDate - now;
