--- a/bonus.html
+++ b/bonus.html
@@ -146,6 +146,28 @@
     <div class="center">
       <a class="button" href="https://teaserfast.ru/u/duc101" target="_blank">👉 Получить бонус</a>
     </div>
+
+    <!-- Блок отзывов и счётчика -->
+    <section style="background: #181818; color: white; padding: 50px 20px; font-family: Arial, sans-serif; text-align: center; border-radius: 12px; margin-top: 40px;">
+      <h2 style="font-size: 28px; margin-bottom: 20px;">🙌 Бонус уже получили <span style="color: #FFD700;">218 человек</span></h2>
+      <p style="font-size: 18px; margin-bottom: 40px;">Присоединяйся к тем, кто уже начал зарабатывать с Teaserfast!</p>
+
+      <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; max-width: 800px; margin: 0 auto;">
+        <div style="background: #222; padding: 20px; border-radius: 10px; width: 250px;">
+          <p style="font-size: 16px;">“Думал обман, но реально начислили бонус! Спасибо!”</p>
+          <p style="font-size: 14px; color: #aaa;">— Алексей, Казань</p>
+        </div>
+        <div style="background: #222; padding: 20px; border-radius: 10px; width: 250px;">
+          <p style="font-size: 16px;">“Регистрировалась ради интереса — уже вывела первую прибыль.”</p>
+          <p style="font-size: 14px; color: #aaa;">— Ольга, Минск</p>
+        </div>
+        <div style="background: #222; padding: 20px; border-radius: 10px; width: 250px;">
+          <p style="font-size: 16px;">“Ничего не вкладывал — просто зарегистрировался и получил бонус.”</p>
+          <p style="font-size: 14px; color: #aaa;">— Иван, Новосибирск</p>
+        </div>
+      </div>
+    </section>
+
   </div>
 
   <script>
