--- a/bonus.html
+++ b/bonus.html
@@ -112,12 +112,13 @@
   </a>
 
   <div class="container">
-    <h1>🎁 Получи 5₽ за регистрацию на Teaserfast</h1>
-    <p class="center">💸 Бонус начисляется сразу после регистрации!<br>
-      Акция действует до 10 июня — не пропусти шанс! ⏳</p>
+    <h1>🎯 Участвуй в розыгрыше и получи 5₽ за регистрацию</h1>
+    <p class="center">💸 Регистрируйся на Teaserfast и получи бонус сразу!  
+      <br>Твоя реферальная ссылка будет крутиться по интернету целую неделю! 🚀  
+      <br>Следующий розыгрыш уже скоро! ⏳</p>
 
     <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/duc101" target="_blank">👉 Получить бонус</a>
+      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">👉 Получить бонус</a>
     </div>
 
     <h2 class="center">⏳ До окончания акции осталось:</h2>
@@ -129,7 +130,8 @@
     <ul>
       <li>🔗 Зарегистрируйтесь на платформе Teaserfast</li>
       <li>🧠 Установите аватар — он обязателен для участия</li>
-      <li>🎯 Участвуйте в активности, чтобы претендовать на главный приз</li>
+      <li>🎯 Участвуйте в активности, чтобы попасть в розыгрыш</li>
+      <li>📡 Ваша реферальная ссылка будет крутиться в интернете 7 дней!</li>
       <li>🏁 Следите за <a class="button" href="https://sphere.freeforums.net/thread/20/teaserfast" target="_blank">результатами конкурса</a></li>
     </ul>
 
@@ -144,7 +146,11 @@
     <br>⚠️ Ссылки распределяются случайным образом. После окончания конкурса будет зафиксирована финальная ссылка.</p>
 
     <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/duc101" target="_blank">👉 Получить бонус</a>
+      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">👉 Получить бонус</a>
+    </div>
+
+    <div class="center" style="margin-top: 30px;">
+      <a class="button" href="https://sphere.freeforums.net/post/54/thread" target="_blank">🎯 Хочу попасть в следующий розыгрыш</a>
     </div>
 
     <!-- Блок отзывов и счётчика -->
@@ -167,7 +173,6 @@
         </div>
       </div>
     </section>
-
   </div>
 
   <script>
