Обновил файл bonus.html с улучшениями

--- a/bonus.html
+++ b/bonus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>🎁 Получи 5₽ за регистрацию</title>
+  <title>🎁 Бонус без вложений — начни зарабатывать уже сегодня!</title>
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
   <style>
     html, body {
@@ -61,31 +61,32 @@
     a.button {
       display: inline-block;
       margin: 10px 5px;
-      padding: 12px 20px;
-      background: #28a745;
-      color: white;
+      padding: 14px 24px;
+      background: #ffc107;
+      color: black;
       text-decoration: none;
       border-radius: 8px;
       font-weight: bold;
       animation: pulse 2s infinite;
+      font-size: 18px;
     }
 
     a.button:hover {
-      background: #218838;
+      background: #ffb300;
     }
 
     @keyframes pulse {
       0% {
         transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(40, 167, 69, 0.6);
+        box-shadow: 0 0 0 0 rgba(255, 193, 7, 0.6);
       }
       70% {
         transform: scale(1.05);
-        box-shadow: 0 0 0 10px rgba(40, 167, 69, 0);
+        box-shadow: 0 0 0 10px rgba(255, 193, 7, 0);
       }
       100% {
         transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(40, 167, 69, 0);
+        box-shadow: 0 0 0 0 rgba(255, 193, 7, 0);
       }
     }
 
@@ -102,6 +103,22 @@
       font-weight: bold;
       color: #e63946;
     }
+
+    .benefits {
+      background: #f1f1f1;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 30px 0;
+    }
+
+    .benefits h2 {
+      margin-bottom: 10px;
+    }
+
+    .benefits ul {
+      list-style-type: '✅';
+      padding-left: 25px;
+    }
   </style>
 </head>
 <body>
@@ -112,13 +129,22 @@
   </a>
 
   <div class="container">
-    <h1>🎯 Участвуй в розыгрыше и получи 5₽ за регистрацию</h1>
-    <p class="center">💸 Регистрируйся на Teaserfast и получи бонус сразу!  
-      <br>Твоя реферальная ссылка будет крутиться по интернету целую неделю! 🚀  
-      <br>Следующий розыгрыш уже скоро! ⏳</p>
+    <h1>💸 Получи 5 рублей за регистрацию на Teaserfast</h1>
+    <p class="center">Никаких вложений — только бонус и шанс выиграть призы!<br>Акция действует ограниченное время ⏳</p>
 
     <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">👉 Получить бонус</a>
+      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">🚀 Получить бонус сейчас</a>
+    </div>
+
+    <div class="benefits">
+      <h2 class="center">Почему это выгодно:</h2>
+      <ul>
+        <li>Бонус 5₽ сразу после регистрации</li>
+        <li>Розыгрыш дополнительных призов</li>
+        <li>Реферальная ссылка будет рекламироваться за тебя</li>
+        <li>Никаких вложений — только польза</li>
+        <li>Проверено участниками — более 200 уже с нами</li>
+      </ul>
     </div>
 
     <h2 class="center">⏳ До окончания акции осталось:</h2>
@@ -126,13 +152,11 @@
 
     <hr>
 
-    <h2>📋 Дополнительные условия:</h2>
+    <h2>📋 Что нужно сделать:</h2>
     <ul>
-      <li>🔗 Зарегистрируйтесь на платформе Teaserfast</li>
-      <li>🧠 Установите аватар — он обязателен для участия</li>
-      <li>🎯 Участвуйте в активности, чтобы попасть в розыгрыш</li>
-      <li>📡 Ваша реферальная ссылка будет крутиться в интернете 7 дней!</li>
-      <li>🏁 Следите за <a class="button" href="https://sphere.freeforums.net/thread/20/teaserfast" target="_blank">результатами конкурса</a></li>
+      <li>1. Зарегистрироваться на платформе Teaserfast</li>
+      <li>2. Установить аватар (обязательно для участия)</li>
+      <li>3. Быть активным — участвовать в розыгрыше</li>
     </ul>
 
     <h2>🏆 Призы:</h2>
@@ -142,22 +166,20 @@
       <li>🥉 3 место — скидки и поощрения</li>
     </ul>
 
-    <p class="center">🎲 Победители выбираются случайно среди активных участников.  
-    <br>⚠️ Ссылки распределяются случайным образом. После окончания конкурса будет зафиксирована финальная ссылка.</p>
+    <p class="center">🎲 Победители выбираются случайно среди активных участников. <br>⚠️ После окончания конкурса ссылка фиксируется.</p>
 
     <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">👉 Получить бонус</a>
+      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">👉 Забрать бонус</a>
     </div>
 
     <div class="center" style="margin-top: 30px;">
       <a class="button" href="https://sphere.freeforums.net/post/54/thread" target="_blank">🎯 Хочу попасть в следующий розыгрыш</a>
     </div>
 
-    <!-- Блок отзывов и счётчика -->
-    <section style="background: #181818; color: white; padding: 50px 20px; font-family: Arial, sans-serif; text-align: center; border-radius: 12px; margin-top: 40px;">
+    <!-- Отзывы -->
+    <section style="background: #181818; color: white; padding: 50px 20px; text-align: center; border-radius: 12px; margin-top: 40px;">
       <h2 style="font-size: 28px; margin-bottom: 20px;">🙌 Бонус уже получили <span style="color: #FFD700;">218 человек</span></h2>
       <p style="font-size: 18px; margin-bottom: 40px;">Присоединяйся к тем, кто уже начал зарабатывать с Teaserfast!</p>
-
       <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; max-width: 800px; margin: 0 auto;">
         <div style="background: #222; padding: 20px; border-radius: 10px; width: 250px;">
           <p style="font-size: 16px;">“Думал обман, но реально начислили бонус! Спасибо!”</p>
