Обновлены ссылки и структура: изменены bonus, index, aviso; удалён teaser.html

--- a/bonus.html
+++ b/bonus.html
@@ -133,7 +133,7 @@
     <p class="center">Никаких вложений — только бонус и шанс выиграть призы!<br>Акция действует ограниченное время ⏳</p>
 
     <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">🚀 Получить бонус сейчас</a>
+      <a class="button" href="https://teaserfast.ru/u/jonibit" target="_blank">🚀 Получить бонус сейчас</a>
     </div>
 
     <div class="benefits">
@@ -169,7 +169,7 @@
     <p class="center">🎲 Победители выбираются случайно среди активных участников. <br>⚠️ После окончания конкурса ссылка фиксируется.</p>
 
     <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/ranjia" target="_blank">👉 Забрать бонус</a>
+      <a class="button" href="https://teaserfast.ru/u/jonibit" target="_blank">👉 Забрать бонус</a>
     </div>
 
     <div class="center" style="margin-top: 30px;">
