Точное позиционирование кнопки, добавлены иконки

--- a/unu/index.html
+++ b/unu/index.html
@@ -7,10 +7,14 @@
   <style>
     body {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       min-height: 100vh;
       margin: 0;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      box-sizing: border-box;
     }
 
     .banner-container {
@@ -27,7 +31,7 @@
 
     .click-button {
       position: absolute;
-      top: 190px; /* регулируй по месту */
+      top: 190px;
       left: 50%;
       transform: translateX(-50%);
       padding: 12px 24px;
@@ -45,11 +49,24 @@
       background-color: #7a42f4;
     }
 
+    .description {
+      max-width: 800px;
+      margin-top: 40px;
+      font-size: 16px;
+      line-height: 1.6;
+      text-align: left;
+      color: #333;
+    }
+
     @media (max-width: 600px) {
       .click-button {
         font-size: 14px;
         padding: 10px 20px;
-        top: 170px;
+        top: 180px;
+      }
+      .description {
+        font-size: 15px;
+        padding: 0 10px;
       }
     }
   </style>
@@ -59,8 +76,38 @@
   <div class="banner-container">
     <img src="https://i.postimg.cc/02cPFFGF/unu.png" alt="UNU Banner" class="banner-image">
     <a href="https://unu.im/re/3498173" target="_blank" class="click-button">
-      Начать зарабатывать на UNU.IM
+      🚀 Начать зарабатывать на UNU.IM
     </a>
+  </div>
+
+  <div class="description">
+    <h2>💸 Как зарабатывать на UNU.IM</h2>
+    <p>Зарегистрируйтесь на платформе UNU.IM и выполняйте простые задания: подписки, лайки, переходы по сайтам. За каждое действие вы получаете реальные деньги без вложений.</p>
+
+    <h2>📢 Как рекламировать</h2>
+    <p>Если у вас есть проект или ссылка, создайте задание на UNU.IM и платформа начнёт приводить вам живую аудиторию. Настраивайте цену, тип задания и получайте результат.</p>
+
+    <h2>🛠️ Преимущества для исполнителей</h2>
+    <ul>
+      <li>✅ Работа без вложений</li>
+      <li>⚡ Мгновенные выплаты</li>
+      <li>📝 Простая регистрация</li>
+      <li>🕓 Поддержка 24/7</li>
+    </ul>
+
+    <h2>🎯 Преимущества для рекламодателей</h2>
+    <ul>
+      <li>🔧 Настройка заданий за 2 минуты</li>
+      <li>👥 Живая аудитория</li>
+      <li>💰 Гибкая стоимость клика</li>
+      <li>📈 Реальные действия от пользователей</li>
+    </ul>
+
+    <h2>📝 Пример заданий</h2>
+    <p>Пример: «Подпишись на Telegram», «Поставь лайк», «Посети сайт» — всё просто и понятно. Вы получаете оплату за выполнение каждого задания.</p>
+
+    <h2>🤝 Доверие и сообщество</h2>
+    <p>UNU.IM уже использует более 10 000 человек. Платформа стабильно платит и помогает зарабатывать без риска.</p>
   </div>
 
 </body>
