--- a/bonus.html
+++ b/bonus.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🎁 Бонус без вложений — начни зарабатывать уже сегодня!</title>
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
+  <!-- Google reCAPTCHA -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <style>
     html, body {
       margin: 0;
@@ -58,7 +60,7 @@
       text-align: center;
     }
 
-    a.button {
+    a.button, button.button {
       display: inline-block;
       margin: 10px 5px;
       padding: 14px 24px;
@@ -69,9 +71,11 @@
       font-weight: bold;
       animation: pulse 2s infinite;
       font-size: 18px;
+      cursor: pointer;
+      border: none;
     }
 
-    a.button:hover {
+    a.button:hover, button.button:hover {
       background: #ffb300;
     }
 
@@ -133,7 +137,15 @@
     <p class="center">Никаких вложений — только бонус и шанс выиграть призы!<br>Акция действует ограниченное время ⏳</p>
 
     <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/jonibit" target="_blank">🚀 Получить бонус сейчас</a>
+      <form action="https://teaserfast.ru/u/jonibit" method="get" target="_blank" class="center" style="display: inline-block;">
+        <button
+          class="g-recaptcha button"
+          data-sitekey="6Lebok4rAAAAALMM3ZrRrXxC2hwhgBmwEeyivl_5"
+          data-callback="onSubmit"
+          data-action="submit">
+          🚀 Получить бонус сейчас
+        </button>
+      </form>
     </div>
 
     <div class="benefits">
@@ -150,7 +162,7 @@
     <h2 class="center">⏳ До окончания акции осталось:</h2>
     <div class="center countdown" id="countdown"></div>
 
-    <hr>
+    <hr />
 
     <h2>📋 Что нужно сделать:</h2>
     <ul>
@@ -166,10 +178,19 @@
       <li>🥉 3 место — скидки и поощрения</li>
     </ul>
 
-    <p class="center">🎲 Победители выбираются случайно среди активных участников. <br>⚠️ После окончания конкурса ссылка фиксируется.</p>
+    <p class="center">🎲 Победители выбираются случайно среди активных участников. <br />⚠️ После окончания конкурса ссылка фиксируется.</p>
 
-    <div class="center">
-      <a class="button" href="https://teaserfast.ru/u/jonibit" target="_blank">👉 Забрать бонус</a>
+    <div class="center" style="margin-bottom: 30px;">
+      <!-- Нижняя кнопка с reCAPTCHA -->
+      <form action="https://teaserfast.ru/u/jonibit" method="get" target="_blank" style="display: inline-block;">
+        <button
+          class="g-recaptcha button"
+          data-sitekey="6Lebok4rAAAAALMM3ZrRrXxC2hwhgBmwEeyivl_5"
+          data-callback="onSubmit"
+          data-action="submit">
+          👉 Забрать бонус
+        </button>
+      </form>
     </div>
 
     <div class="center" style="margin-top: 30px;">
@@ -238,23 +259,35 @@
       detectRetina: true
     });
 
+    // Таймер обратного отсчёта
     const endDate = new Date("June 10, 2025 23:59:59").getTime();
+    const countdownElement = document.getElementById("countdown");
     const countdownInterval = setInterval(function() {
       const now = new Date().getTime();
       const distance = endDate - now;
+
+      if (distance < 0) {
+        clearInterval(countdownInterval);
+        countdownElement.innerHTML = "Акция завершена";
+        return;
+      }
+
       const days = Math.floor(distance / (1000 * 60 * 60 * 24));
       const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-      document.getElementById("countdown").innerHTML =
-        days + "д " + hours + "ч " + minutes + "м " + seconds + "с ";
-
-      if (distance < 0) {
-        clearInterval(countdownInterval);
-        document.getElementById("countdown").innerHTML = "Время истекло!";
-      }
+      countdownElement.innerHTML = `${days} дн ${hours} ч ${minutes} мин ${seconds} сек`;
     }, 1000);
+
+    // Функция для Invisible reCAPTCHA, вызывается после успешной проверки
+    function onSubmit(token) {
+      // Найдем кнопку, чей токен сработал
+      // Сформируем форму из кнопки и отправим
+      // На самом деле reCAPTCHA автоматически отправляет форму, если button — type=submit
+      // Для простоты, ничего дополнительно делать не нужно
+      // Если форма не отправляется автоматически, можно вызывать submit вручную, но обычно не требуется
+    }
   </script>
 </body>
 </html>
