Обновил реферальную ссылку в bonus.html

--- a/bonus.html
+++ b/bonus.html
@@ -149,7 +149,7 @@
 
     <!-- Кнопки бонуса, изначально скрыты -->
     <div class="center">
-      <a class="button bonus-button" href="https://teaserfast.ru/u/jonibit" target="_blank" style="display:none;">
+      <a class="button bonus-button" href="https://teaserfast.ru/u/Alishay298" target="_blank" style="display:none;">
         🚀 Получить бонус сейчас
       </a>
     </div>
@@ -187,7 +187,7 @@
     <p class="center">🎲 Победители выбираются случайно среди активных участников. <br>⚠️ После окончания конкурса ссылка фиксируется.</p>
 
     <div class="center">
-      <a class="button bonus-button" href="https://teaserfast.ru/u/jonibit" target="_blank" style="display:none;">
+      <a class="button bonus-button" href="https://teaserfast.ru/u/Alishay298" target="_blank" style="display:none;">
         👉 Забрать бонус
       </a>
     </div>
